; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/libunbound/extr_context.c_context_serialize_quit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/libunbound/extr_context.c_context_serialize_quit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UB_LIBCMD_QUIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @context_serialize_quit(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i64 @malloc(i32 4)
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  store i32 4, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @UB_LIBCMD_QUIT, align 4
  %14 = call i32 @sldns_write_uint32(i32* %12, i32 %13)
  %15 = load i32*, i32** %4, align 8
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @sldns_write_uint32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
